--- a/package.json
+++ b/package.json
@@ -1,31 +1,20 @@
 {
   "name": "hcn",
   "author": "Nikita Gaidakov",
+  "private": true,
   "version": "0.0.0",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development vite",
-    "build": "vite build",
-    "test": "jest",
-    "test:watch": "jest --watchAll",
-    "serve": "vite preview"
+    "start": "vite",
+    "build": "vue-tsc --noEmit && vite build",
+    "preview": "vite preview"
+  },
+  "dependencies": {
+    "vue": "^3.2.37"
   },
   "devDependencies": {
-    "@sveltejs/vite-plugin-svelte": "^1.0.0-next.37",
-    "@testing-library/svelte": "^3.0.3",
-    "@types/jest": "^26.0.21",
-    "autoprefixer": "^10.2.5",
-    "babel-jest": "^26.6.3",
-    "cross-env": "^7.0.3",
-    "cssnano": "^5.0.6",
-    "jest": "^26.6.3",
-    "postcss": "^8.4.6",
-    "postcss-load-config": "^3.0.1",
-    "svelte": "^3.35.0",
-    "svelte-jester": "^1.3.1",
-    "svelte-preprocess": "^4.6.9",
-    "tailwindcss": "^3.0.23",
-    "ts-jest": "^26.5.4",
-    "typescript": "^4.2.3",
-    "vite": "^2.8.4"
+    "@vitejs/plugin-vue": "^3.0.0",
+    "typescript": "^4.6.4",
+    "vite": "^3.0.0",
+    "vue-tsc": "^0.38.4"
   }
 }
