--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "version": "0.0.0",
   "scripts": {
     "start": "vite",
-    "build": "vue-tsc --noEmit && vite build",
+    "check": "vue-tsc --noEmit",
+    "build": "check && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
