--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@vitejs/plugin-vue": "^3.0.0",
     "tailwindcss": "^3.1.6",
     "typescript": "^4.6.4",
-    "vite": "^3.0.0",
+    "vite": "3.1.0",
+    "vite-plugin-checker": "^0.5.1",
     "vue-tsc": "^0.38.4"
   }
 }
