--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "author": "Nikita Gaidakov",
   "private": true,
   "version": "0.0.0",
+  "type": "module",
   "scripts": {
     "start": "vite",
     "check": "vue-tsc --noEmit",
